--- a/styles/blocks/_button.scss
+++ b/styles/blocks/_button.scss
@@ -9,12 +9,13 @@
   height: 30px;
   min-width: 120px;
   font-size: 14px;
+  transition: color 0.2s ease-in-out;
 
-  @include laptop-min-width {
-    height: 42px;
-    min-width: 188px;
-    font-size: 18px;
-  }
+   @include laptop-min-width {
+     height: 42px;
+     min-width: 188px;
+     font-size: 18px;
+   }
   
 }
 
