--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -5,4 +5,6 @@
   --button-violet: rgb(173, 26, 175);
   --black: rgb(0, 0, 0);
   --blue-button-hover: rgb(133, 255, 243);
+
+  --violet-transparent: rgba(130, 0, 106, 0.2);
 }
