--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -11,4 +11,6 @@
         'blocks/button',
         'blocks/button-second',
         'blocks/button-ternary',
-        'blocks/dashboard';
+        'blocks/dashboard',
+        'blocks/intro',
+        'blocks/wallets-cards';
