--- a/styles/styles.css
+++ b/styles/styles.css
@@ -82,7 +82,7 @@ body::-webkit-scrollbar {
 }
 
 ::-webkit-scrollbar {
-  height: 12px; /*высот адля горизонтального скролбара*/
+  height: 8px; /*высот адля горизонтального скролбара*/
   width: 20px;
 }
 
@@ -93,6 +93,15 @@ body::-webkit-scrollbar {
   box-shadow: inset 0 0 10px 6px rgba(173, 26, 175, 0.2);
 }
 
+@supports (-moz-appearance: none) {
+  ::-webkit-scrollbar {
+    display: none;
+  } /* Отключаем WebKit-скроллбар */
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: var(--button-violet) var(--violet-transparent);
+  }
+}
 *,
 ::before,
 ::after {
@@ -249,6 +258,7 @@ svg * {
   --button-violet: rgb(173, 26, 175);
   --black: rgb(0, 0, 0);
   --blue-button-hover: rgb(133, 255, 243);
+  --violet-transparent: rgba(130, 0, 106, 0.2);
 }
 
 @font-face {
@@ -635,6 +645,8 @@ svg * {
 }
 
 .dashboard__inner {
+  position: relative;
+  z-index: 10;
   padding: 4% 0 0 4%;
   display: grid;
   row-gap: 34px;
@@ -826,4 +838,119 @@ svg * {
   transform: scale(1.04);
   z-index: 2;
   box-shadow: 0 0 12px rgba(0, 0, 0, 0.4);
+}
+
+.intro {
+  margin-top: -60px;
+  text-align: center;
+  position: relative;
+  width: 100%;
+  display: grid;
+  grid-template-rows: repeat(3, 100px);
+}
+@media (min-width: 768px) {
+  .intro {
+    grid-template-rows: repeat(3, 200px);
+  }
+}
+@media (min-width: 1600px) {
+  .intro {
+    margin-top: -130px;
+    grid-template-rows: 316px 316px 316px;
+  }
+}
+.intro:before {
+  position: absolute;
+  content: "";
+  width: 200px;
+  height: 200px;
+  top: 50%;
+  transform: translate(-50%, -10%);
+  background: rgba(173, 26, 175, 0.7);
+  filter: blur(130px);
+}
+@media (min-width: 768px) {
+  .intro:before {
+    filter: blur(230px);
+    width: 400px;
+    height: 400px;
+  }
+}
+
+.intro__text {
+  background: linear-gradient(90.13deg, rgb(255, 255, 255) 20%, rgb(248, 29, 251) 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: 400;
+  font-size: 18px;
+  padding-inline: 20px;
+  grid-area: 2/1/3/2;
+  align-self: end;
+}
+@media (min-width: 768px) {
+  .intro__text {
+    align-self: center;
+    font-size: 26px;
+  }
+}
+@media (min-width: 1024px) {
+  .intro__text {
+    align-self: end;
+  }
+}
+
+.intro__heading {
+  grid-area: 3/1/4/2;
+  align-self: start;
+  font-weight: 500;
+  font-size: 30px;
+  padding-inline: 20px;
+  align-self: center;
+}
+@media (min-width: 768px) {
+  .intro__heading {
+    font-size: 72px;
+    align-self: start;
+  }
+}
+@media (min-width: 1280px) {
+  .intro__heading {
+    align-self: start;
+    font-size: 100px;
+  }
+}
+
+.intro__decor-wrap:nth-child(1) {
+  grid-area: 1/1/2/2;
+}
+
+.intro__decor-wrap:nth-child(2) {
+  grid-area: 2/1/3/2;
+}
+
+.intro__decor-wrap:nth-child(3) {
+  grid-area: 3/1/4/2;
+}
+
+.intro__decor-wrap {
+  width: 100%;
+}
+
+.intro__decor-img {
+  width: 100%;
+}
+
+.wallets {
+  margin: 0 auto;
+  max-width: 800px;
+}
+@media (min-width: 1024px) {
+  .wallets {
+    max-width: 1918px;
+  }
+}
+
+.wallets__grid {
+  display: grid;
+  grid-auto-flow: column;
 }/*# sourceMappingURL=styles.css.map */
