added new section the rocess

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -7,4 +7,6 @@
   --blue-button-hover: rgb(133, 255, 243);
 
   --violet-transparent: rgba(130, 0, 106, 0.2);
+
+  --voilet-bright: rgb(248, 29, 251);
 }
