--- a/styles/_media_queries.scss
+++ b/styles/_media_queries.scss
@@ -4,7 +4,7 @@ $laptop-min-width: 1024px;
 $desktop-min-width: 1280px;
 
 $desktop_large-min-width: 1600px;
-
+$xxl-min-width: 1920px;
 
 @mixin mobile-min-width {
   @media (min-width:$mobile-min-width) {
