--- a/styles/blocks/_intro.scss
+++ b/styles/blocks/_intro.scss
@@ -6,7 +6,7 @@
   position: relative;
   width: 100%;
   display: grid;
-  grid-template-rows: repeat(3, 100px);
+  grid-template-rows: 100px 80px 100px;
 
     @include tablet-min-width {
          grid-template-rows: repeat(3, 200px);
@@ -89,6 +89,11 @@
 
 .intro__decor-wrap:nth-child(3) {
   grid-area: 3 / 1 / 4 / 2;
+  display: none;
+
+    @include laptop-min-width {
+      display: block;
+    }
 
 }
 
