--- a/styles/styles.css
+++ b/styles/styles.css
@@ -259,6 +259,7 @@ svg * {
   --black: rgb(0, 0, 0);
   --blue-button-hover: rgb(133, 255, 243);
   --violet-transparent: rgba(130, 0, 106, 0.2);
+  --voilet-bright: rgb(248, 29, 251);
 }
 
 @font-face {
@@ -268,6 +269,34 @@ svg * {
   font-style: normal;
   font-display: swap;
 }
+.content-wrapper {
+  width: 100%;
+  margin: 0 auto;
+  margin-top: 20px;
+  display: grid;
+  row-gap: 120px;
+  padding-inline: 12px;
+}
+@media (min-width: 480px) {
+  .content-wrapper {
+    padding-inline: 38px;
+    margin-top: 34px;
+  }
+}
+@media (min-width: 768px) {
+  .content-wrapper {
+    padding-inline: 60px;
+    margin-top: 64px;
+  }
+}
+@media (min-width: 1280px) {
+  .content-wrapper {
+    padding-inline: 60px;
+    row-gap: 292px;
+    margin-top: 156px;
+  }
+}
+
 .header {
   margin: 0 auto;
   max-width: 800px;
@@ -846,7 +875,7 @@ svg * {
   position: relative;
   width: 100%;
   display: grid;
-  grid-template-rows: repeat(3, 100px);
+  grid-template-rows: 100px 80px 100px;
 }
 @media (min-width: 768px) {
   .intro {
@@ -930,6 +959,12 @@ svg * {
 
 .intro__decor-wrap:nth-child(3) {
   grid-area: 3/1/4/2;
+  display: none;
+}
+@media (min-width: 1024px) {
+  .intro__decor-wrap:nth-child(3) {
+    display: block;
+  }
 }
 
 .intro__decor-wrap {
@@ -941,16 +976,229 @@ svg * {
 }
 
 .wallets {
+  width: 100%;
   margin: 0 auto;
-  max-width: 800px;
+  max-width: 1860px;
 }
-@media (min-width: 1024px) {
-  .wallets {
-    max-width: 1918px;
+
+.wallets__inner {
+  padding-inline-start: 12px;
+  width: 100%;
+}
+@media (min-width: 480px) {
+  .wallets__inner {
+    padding-inline-start: 34px;
+  }
+}
+@media (min-width: 768px) {
+  .wallets__inner {
+    padding-inline-start: 60px;
+  }
+}
+@media (min-width: 1280px) {
+  .wallets__inner {
+    padding-inline-start: 120px;
   }
 }
 
 .wallets__grid {
+  padding-inline-end: 14px;
+  overflow-x: auto;
   display: grid;
   grid-auto-flow: column;
+  grid-auto-columns: 220px;
+  -moz-column-gap: 24px;
+       column-gap: 24px;
+}
+@media (min-width: 1280px) {
+  .wallets__grid {
+    padding-inline-end: 20px;
+    grid-auto-columns: 272px;
+    -moz-column-gap: 60px;
+         column-gap: 60px;
+  }
+}
+
+.wallets__grid-item {
+  margin-bottom: 12px;
+  height: 270px;
+  display: grid;
+  place-items: center;
+  background: linear-gradient(147.75deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.05) 100%);
+  border-radius: 16px;
+}
+@media (min-width: 1280px) {
+  .wallets__grid-item {
+    height: 332px;
+  }
+}
+
+.wallets__link {
+  place-self: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 150px;
+  height: 150px;
+  -webkit-clip-path: circle(50%);
+          clip-path: circle(50%);
+  background: linear-gradient(147.75deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.05) 100%);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+  transition: transform 0.2s ease-in-out;
+}
+@media (min-width: 1280px) {
+  .wallets__link {
+    width: 200px;
+    height: 200px;
+  }
+}
+.wallets__link:hover {
+  transform: scale(1.03);
+  background: linear-gradient(147.75deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.2) 100%);
+}
+
+.wallets__img {
+  width: 90px;
+  height: 90px;
+}
+@media (min-width: 1280px) {
+  .wallets__img {
+    width: 114px;
+    height: 114px;
+  }
+}
+
+.wallets__text {
+  padding-bottom: 16px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 25px;
+}
+
+.process {
+  display: grid;
+  justify-items: center;
+  row-gap: 14px;
+}
+@media (min-width: 1280px) {
+  .process {
+    row-gap: 60px;
+  }
+}
+
+.process__heading {
+  position: relative;
+  font-weight: 500;
+  font-size: 42px;
+  line-height: 130px;
+}
+@media (min-width: 1280px) {
+  .process__heading {
+    font-size: 64px;
+  }
+}
+.process__heading:after {
+  position: absolute;
+  content: "";
+  width: 80%;
+  height: 100%;
+  bottom: -20%;
+  left: 50%;
+  transform: translateX(-50%);
+  background: rgba(173, 26, 175, 0.5);
+  filter: blur(120px);
+}
+@media (min-width: 1280px) {
+  .process__heading:after {
+    background: rgba(173, 26, 175, 0.7);
+    filter: blur(200px);
+    bottom: -50%;
+  }
+}
+
+.process__icon {
+  color: var(--voilet-bright);
+  position: relative;
+  z-index: 1;
+}
+
+.process__grid {
+  display: grid;
+  row-gap: 28px;
+}
+@media (min-width: 1280px) {
+  .process__grid {
+    grid-auto-flow: column;
+    -moz-column-gap: 16px;
+         column-gap: 16px;
+  }
+}
+
+.process__grid-item {
+  display: grid;
+  grid-row-gap: 20px;
+  place-items: center;
+}
+
+.process__separator {
+  transform: rotate(90deg) translate(6%, 50%);
+  height: 174px;
+  display: block;
+  transform-origin: center;
+}
+@media (min-width: 1280px) {
+  .process__separator {
+    transform: none;
+    height: auto;
+    display: grid;
+    align-items: center;
+  }
+}
+
+.process__separator--short {
+  transform: rotate(90deg) translate(18%, 50%);
+  height: 126px;
+}
+@media (min-width: 1280px) {
+  .process__separator--short {
+    transform: none;
+    height: auto;
+  }
+}
+
+.process__icon-circle {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 106px;
+  height: 106px;
+  border-radius: 50%;
+  background: linear-gradient(147.75deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.05) 100%);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+}
+.process__icon-circle:after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  inset: 0;
+  background: linear-gradient(147.75deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%);
+  opacity: 0;
+  transition: opacity 0.2s ease;
+  z-index: -1;
+  border-radius: 50%;
+  box-shadow: 0 0 6px 8px rgba(173, 26, 175, 0.2);
+}
+.process__icon-circle:hover:after {
+  opacity: 1;
+}
+
+.process__text {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 28px;
+  white-space: nowrap;
 }/*# sourceMappingURL=styles.css.map */
